--- a/index1LOGO.html
+++ b/index1LOGO.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <header>
-        <img src="/mnt/data/Noga-Tech.jpg" alt="Noga Tech Systems Logo">
+        <img src="Noga-Tech.jpg" alt="Noga Tech Systems Logo">
     </header>
     <div class="container">
         <h1>ברוכים הבאים לנגה תק סיסטמס</h1>
