--- a/index.html
+++ b/index.html
@@ -6,42 +6,33 @@
     <title>Noga Tech Systems</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #2b5876, #4e4376);
-            color: white;
+            background-color: white;
             text-align: center;
-        }
-        header {
-            background-color: #222;
-            padding: 20px;
-            text-align: center;
+            font-family: Arial, sans-serif;
         }
         header img {
-            max-width: 200px;
+            max-width: 300px;
             height: auto;
+            margin-top: 20px;
         }
-        .container {
-            padding: 40px;
+        .content {
+            margin: 20px;
+            padding: 20px;
         }
-        .btn {
+        .whatsapp-link {
+            display: inline-block;
+            margin-top: 20px;
             padding: 10px 20px;
-            background: #ff9800;
-            border: none;
+            background-color: #25D366;
             color: white;
             font-size: 18px;
-            cursor: pointer;
+            text-decoration: none;
             border-radius: 5px;
-            transition: 0.3s;
         }
-        .btn:hover {
-            background: #e68900;
-        }
-        footer {
-            margin-top: 50px;
-            padding: 10px;
-            background: rgba(0, 0, 0, 0.2);
+        .whatsapp-link:hover {
+            background-color: #1da851;
         }
     </style>
 </head>
@@ -49,13 +40,13 @@
     <header>
         <img src="Noga-Tech.jpg" alt="Noga Tech Systems Logo">
     </header>
-    <div class="container">
+    <div class="content">
         <h1>ברוכים הבאים לנגה תק סיסטמס</h1>
-        <p>פתרונות ייחודיים למערכת פריוריטי</p>
-        <button class="btn" onclick="alert('ניצור קשר בקרוב!')">צור קשר</button>
+        <p>
+            נגה תק סיסטמס מתמחה במתן פתרונות מקצועיים למערכת פריוריטי. אנו מספקים שירותי ייעוץ, תמיכה והטמעה לעסקים,<br>
+            תוך דגש על מענה מהיר ומדויק לצרכים שלכם.
+        </p>
+        <a class="whatsapp-link" href="https://wa.me/0545610611" target="_blank">דברו איתנו בווצאפ</a>
     </div>
-    <footer>
-        &copy; 2025 נגה תק סיסטמס | כל הזכויות שמורות
-    </footer>
 </body>
 </html>
