--- a/index.html
+++ b/index.html
@@ -34,6 +34,25 @@
         .whatsapp-link:hover {
             background-color: #1da851;
         }
+        .services {
+            margin-top: 30px;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap;
+        }
+        .service {
+            width: 200px;
+            text-align: center;
+        }
+        .service img {
+            width: 60px;
+            height: 60px;
+        }
+        .service h3 {
+            font-size: 18px;
+            margin: 10px 0;
+        }
     </style>
 </head>
 <body>
@@ -43,9 +62,27 @@
     <div class="content">
         <h1>ברוכים הבאים לנגה תק סיסטמס</h1>
         <p>
-            נגה תק סיסטמס מתמחה במתן פתרונות מקצועיים למערכת פריוריטי. אנו מספקים שירותי ייעוץ, תמיכה והטמעה לעסקים,<br>
-            תוך דגש על מענה מהיר ומדויק לצרכים שלכם.
+            נגה טק סיסטמס היא חברה מובילה בתחום שירותי המחשוב והטכנולוגיה בישראל. החברה מתמחה בפתרונות מותאמים אישית עם דגש מיוחד על שירות, ייעוץ ותמיכה במערכת Priority.<br>
+            אנו מתמקדים ביצירת פתרונות טכנולוגיים מתקדמים שמסייעים ללקוחותינו לשפר את תהליכי העבודה ולהשיג את מטרותיהם העסקיות.
         </p>
+        <h2>השירותים שלנו:</h2>
+        <div class="services">
+            <div class="service">
+                <img src="priority-implementation.png" alt="הטמעת Priority">
+                <h3>הטמעת Priority</h3>
+                <p>מתן פתרונות מותאמים אישית למערכת Priority.</p>
+            </div>
+            <div class="service">
+                <img src="process-optimization.png" alt="ייעול תהליכים">
+                <h3>ייעול תהליכים</h3>
+                <p>אפיון ושיפור תהליכים עסקיים בעזרת המערכת.</p>
+            </div>
+            <div class="service">
+                <img src="user-training.png" alt="הדרכות משתמשים">
+                <h3>הדרכות משתמשים</h3>
+                <p>הכשרה מלאה למשתמשי הקצה במודולים השונים.</p>
+            </div>
+        </div>
         <a class="whatsapp-link" href="https://wa.me/0545610611" target="_blank">דברו איתנו בווצאפ</a>
     </div>
 </body>
