--- a/index.html
+++ b/index.html
@@ -53,73 +53,28 @@
             font-size: 18px;
             margin: 10px 0;
         }
-        .background-animation {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            overflow: hidden;
-            background: linear-gradient(135deg, #2b5876, #4e4376);
-        }
-        .background-animation img {
-            position: absolute;
-            width: 100px;
-            height: 100px;
-            opacity: 0.3;
-            animation: float 10s infinite ease-in-out;
-        }
-        .background-animation img:nth-child(1) {
-            top: 10%;
-            left: 20%;
-            animation-delay: 0s;
-        }
-        .background-animation img:nth-child(2) {
-            top: 50%;
-            left: 60%;
-            animation-delay: 2s;
-        }
-        .background-animation img:nth-child(3) {
-            top: 30%;
-            left: 80%;
-            animation-delay: 4s;
-        }
-        @keyframes float {
-            0%, 100% {
-                transform: translateY(0);
-            }
-            50% {
-                transform: translateY(-20px);
-            }
-        }
     </style>
 </head>
 <body>
-    <div class="background-animation">
-        <img src="adjusted_image_1.png" alt="Background Image 1">
-        <img src="adjusted_image_2.png" alt="Background Image 2">
-        <img src="adjusted_image_3.png" alt="Background Image 3">
-    </div>
     <header>
         <img src="Noga-Tech.jpg" alt="Noga Tech Systems Logo">
     </header>
     <div class="content">
         <h1>ברוכים הבאים לנגה טק סיסטמס</h1>
         <p>
-            Priority נגה טק סיסטמס היא חברה מובילה בתחום שירותי המחשוב והטכנולוגיה בישראל. החברה מתמחה בפתרונות מותאמים אישית עם דגש מיוחד על שירות, ייעוץ ותמיכה במערכת  <br>
-            אנו מתמקדים ביצירת פתרונות טכנולוגיים מתקדמים שמסייעים ללקוחותינו לשפר את תהליכי העבודה ולהשיג את מטרותיהם העסקיות
+            Priority נגה טק סיסטמס היא חברה מובילה בתחום שירותי המחשוב והטכנולוגיה בישראל. החברה מתמחה בפתרונות מותאמים אישית עם דגש מיוחד על שירות, ייעוץ ותמיכה במערכת  .<br>
+            אנו מתמקדים ביצירת פתרונות טכנולוגיים מתקדמים שמסייעים ללקוחותינו לשפר את תהליכי העבודה ולהשיג את מטרותיהם העסקיות.
         </p>
-        <h2>השירותים שלנו</h2>
+        <h2>השירותים שלנו:</h2>
         <div class="services">
             <div class="service">
                 <img src="adjusted_image_1.png" alt="הטמעת Priority">
-                <h3>Priority הטמעת מערכת ה</h3>
+                <h3>הטמעת Priority</h3>
                 <p>מתן פתרונות מותאמים אישית למערכת Priority.</p>
             </div>
             <div class="service">
                 <img src="adjusted_image_2.png" alt="ייעול תהליכים">
-                <h3>ייעול תהליכים עסקיים </h3>
+                <h3>ייעול תהליכים</h3>
                 <p>אפיון ושיפור תהליכים עסקיים בעזרת המערכת.</p>
             </div>
             <div class="service">
@@ -129,8 +84,8 @@
             </div>
             <div class="service">
                 <img src="adjusted_image_4.png" alt="תכנות מערכת Priority">
-                <h3>Priority תכנות מערכת ה  </h3> 
-                <p>פיתוח והתאמה אישית של מודולים במערכת הפריוריטי לפי צורכי הלקוח</p> 
+                <h3>תכנות מערכת Priority</h3>
+                <p>פיתוח והתאמה אישית של מודולים במערכת Priority לפי צורכי הלקוח.</p>
             </div>
         </div>
         <a class="whatsapp-link" href="https://wa.me/0545610611" target="_blank">דברו איתנו וואטסאפ</a>
