--- a/index.html
+++ b/index.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
-<html lang="he">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noga Tech Systems</title>
     <style>
+        /* General Styles */
         body {
             margin: 0;
             padding: 0;
-            background-color: white;
-            text-align: center;
+            overflow: hidden;
             font-family: Arial, sans-serif;
+            background: linear-gradient(120deg, #f3f4f6, #e6eef3);
+            color: #2c3e50;
         }
+
+        canvas {
+            display: block;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
+
         header img {
             max-width: 300px;
             height: auto;
-            margin-top: 20px;
+            margin: 20px auto;
+            display: block;
         }
+
         .content {
             margin: 20px;
             padding: 20px;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 10px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+            text-align: center;
         }
+
         .whatsapp-link {
             display: inline-block;
             margin-top: 20px;
@@ -31,9 +51,11 @@
             text-decoration: none;
             border-radius: 5px;
         }
+
         .whatsapp-link:hover {
             background-color: #1da851;
         }
+
         .services {
             margin-top: 30px;
             display: flex;
@@ -41,14 +63,21 @@
             gap: 20px;
             flex-wrap: wrap;
         }
+
         .service {
             width: 200px;
             text-align: center;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 10px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
         }
+
         .service img {
             width: 60px;
             height: 60px;
         }
+
         .service h3 {
             font-size: 18px;
             margin: 10px 0;
@@ -56,13 +85,87 @@
     </style>
 </head>
 <body>
+    <canvas id="background"></canvas>
+    <script>
+        const canvas = document.getElementById('background');
+        const ctx = canvas.getContext('2d');
+
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+
+        const particles = [];
+
+        class Particle {
+            constructor(x, y, size, color, velocityX, velocityY) {
+                this.x = x;
+                this.y = y;
+                this.size = size;
+                this.color = color;
+                this.velocityX = velocityX;
+                this.velocityY = velocityY;
+            }
+
+            draw() {
+                ctx.beginPath();
+                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+                ctx.fillStyle = this.color;
+                ctx.fill();
+                ctx.closePath();
+            }
+
+            update() {
+                this.x += this.velocityX;
+                this.y += this.velocityY;
+
+                if (this.x - this.size < 0 || this.x + this.size > canvas.width) this.velocityX *= -1;
+                if (this.y - this.size < 0 || this.y + this.size > canvas.height) this.velocityY *= -1;
+
+                this.draw();
+            }
+        }
+
+        function initParticles(count) {
+            for (let i = 0; i < count; i++) {
+                const size = Math.random() * 15 + 10;
+                const x = Math.random() * canvas.width;
+                const y = Math.random() * canvas.height;
+                const color = 'rgba(173, 216, 230, 0.475)';
+                const velocityX = (Math.random() - 0.5) * 0.5;
+                const velocityY = (Math.random() - 0.5) * 0.5;
+
+                particles.push(new Particle(x, y, size, color, velocityX, velocityY));
+            }
+        }
+
+        function animate() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            particles.forEach(particle => {
+                particle.update();
+            });
+
+            requestAnimationFrame(animate);
+        }
+
+        initParticles(75);
+        animate();
+
+        window.addEventListener('resize', () => {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            particles.length = 0;
+            initParticles(75);
+        });
+    </script>
+
     <header>
         <img src="Noga-Tech.jpg" alt="Noga Tech Systems Logo">
     </header>
+
     <div class="content">
         <h1>ברוכים הבאים לנגה טק סיסטמס</h1>
         <p>
-            Priority נגה טק סיסטמס היא חברה מובילה בתחום שירותי המחשוב והטכנולוגיה בישראל. החברה מתמחה בפתרונות מותאמים אישית עם דגש מיוחד על שירות, ייעוץ ותמיכה במערכת  .<br>
+            Priority נגה טק סיסטמס היא חברה מובילה בתחום שירותי המחשוב והטכנולוגיה בישראל. החברה מתמחה בפתרונות מותאמים אישית עם דגש מיוחד על שירות, ייעוץ ותמיכה במערכת Priority.<br>
             אנו מתמקדים ביצירת פתרונות טכנולוגיים מתקדמים שמסייעים ללקוחותינו לשפר את תהליכי העבודה ולהשיג את מטרותיהם העסקיות.
         </p>
         <h2>השירותים שלנו:</h2>
@@ -88,7 +191,7 @@
                 <p>פיתוח והתאמה אישית של מודולים במערכת Priority לפי צורכי הלקוח.</p>
             </div>
         </div>
-        <a class="whatsapp-link" href="https://wa.me/0545610611" target="_blank">דברו איתנו וואטסאפ</a>
+        <a class="whatsapp-link" href="https://wa.me/0545610611" target="_blank">דברו איתנו בוואטסאפ</a>
     </div>
 </body>
 </html>
