--- a/index.html
+++ b/index.html
@@ -41,46 +41,63 @@
             text-align: center;
         }
 
-        .whatsapp-link {
+        .contact-button {
             display: inline-block;
             margin-top: 20px;
             padding: 10px 20px;
-            background-color: #25D366;
+            background-color: #007BFF;
             color: white;
             font-size: 18px;
             text-decoration: none;
             border-radius: 5px;
+            cursor: pointer;
+            border: none;
         }
 
-        .whatsapp-link:hover {
-            background-color: #1da851;
+        .contact-button:hover {
+            background-color: #0056b3;
         }
 
-        .services {
-            margin-top: 30px;
-            display: flex;
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
             justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
+            align-items: center;
         }
 
-        .service {
-            width: 200px;
-            text-align: center;
-            background: rgba(255, 255, 255, 0.9);
-            padding: 10px;
+        .modal-content {
+            background: white;
+            padding: 20px;
             border-radius: 10px;
+            text-align: center;
+            width: 300px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
         }
 
-        .service img {
-            width: 60px;
-            height: 60px;
+        .modal-content input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
 
-        .service h3 {
-            font-size: 18px;
-            margin: 10px 0;
+        .close-button {
+            background-color: #dc3545;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .close-button:hover {
+            background-color: #c82333;
         }
     </style>
 </head>
@@ -168,30 +185,35 @@
             Priority נגה טק סיסטמס היא חברה מובילה בתחום שירותי המחשוב והטכנולוגיה בישראל. החברה מתמחה בפתרונות מותאמים אישית עם דגש מיוחד על שירות, ייעוץ ותמיכה במערכת Priority.<br>
             אנו מתמקדים ביצירת פתרונות טכנולוגיים מתקדמים שמסייעים ללקוחותינו לשפר את תהליכי העבודה ולהשיג את מטרותיהם העסקיות.
         </p>
-        <h2>השירותים שלנו:</h2>
-        <div class="services">
-            <div class="service">
-                <img src="adjusted_image_1.png" alt="הטמעת Priority">
-                <h3>הטמעת Priority</h3>
-                <p>מתן פתרונות מותאמים אישית למערכת Priority.</p>
-            </div>
-            <div class="service">
-                <img src="adjusted_image_2.png" alt="ייעול תהליכים">
-                <h3>ייעול תהליכים</h3>
-                <p>אפיון ושיפור תהליכים עסקיים בעזרת המערכת.</p>
-            </div>
-            <div class="service">
-                <img src="adjusted_image_3.png" alt="הדרכות משתמשים">
-                <h3>הדרכות משתמשים</h3>
-                <p>הכשרה מלאה למשתמשי הקצה במודולים השונים.</p>
-            </div>
-            <div class="service">
-                <img src="adjusted_image_4.png" alt="תכנות מערכת Priority">
-                <h3>תכנות מערכת Priority</h3>
-                <p>פיתוח והתאמה אישית של מודולים במערכת Priority לפי צורכי הלקוח.</p>
-            </div>
-        </div>
-        <a class="whatsapp-link" href="https://wa.me/0545610611" target="_blank">דברו איתנו בוואטסאפ</a>
+        <button class="contact-button" onclick="openModal()">צור קשר</button>
     </div>
+
+    <div id="contactModal" class="modal">
+        <div class="modal-content">
+            <h2>צור קשר</h2>
+            <input type="text" placeholder="שם מלא">
+            <input type="email" placeholder="אימייל">
+            <input type="text" placeholder="הודעה">
+            <button class="close-button" onclick="closeModal()">סגור</button>
+        </div>
+    </div>
+
+    <script>
+        const modal = document.getElementById('contactModal');
+
+        function openModal() {
+            modal.style.display = 'flex';
+        }
+
+        function closeModal() {
+            modal.style.display = 'none';
+        }
+
+        window.onclick = function(event) {
+            if (event.target === modal) {
+                closeModal();
+            }
+        };
+    </script>
 </body>
 </html>
