--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             overflow: hidden;
             font-family: Arial, sans-serif;
             background: linear-gradient(120deg, #f3f4f6, #e6eef3);
-            color: #2c3e50;
+            color: # white;
         }
 
         canvas {
