--- a/index.html
+++ b/index.html
@@ -100,19 +100,49 @@
             margin: 10px 0;
         }
 
-        /* Form Styles */
+        /* Modal Styles */
+        /* Style the Modal (hidden by default) */
         #contactForm {
             display: none;
-            padding: 20px;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-            width: 300px;
-            margin: 20px auto;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+            overflow: auto;
+            padding-top: 60px;
         }
 
-        #contactForm h3 {
-            margin-top: 0;
+        /* Modal Content */
+        .modal-content {
+            background-color: white;
+            margin: 5% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 400px;
+            border-radius: 10px;
+        }
+
+        .modal-content h3 {
+            text-align: center;
+        }
+
+        /* Style the close button */
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
         }
 
         input[type="text"], input[type="email"], textarea {
@@ -216,6 +246,11 @@
         function showContactForm() {
             document.getElementById('contactForm').style.display = 'block';
         }
+
+        // Close the modal when the user clicks on <span> (x)
+        function closeModal() {
+            document.getElementById('contactForm').style.display = 'none';
+        }
     </script>
 
     <header>
@@ -257,24 +292,27 @@
         <!-- צור קשר -->
         <button class="contact-button" onclick="showContactForm()">צור קשר</button>
 
-        <!-- טופס צור קשר -->
+        <!-- Modal for Contact Form -->
         <div id="contactForm">
-            <h3>צור קשר</h3>
-            <form action="send_email.php" method="POST">
-                <label for="name">שם:</label><br>
-                <input type="text" id="name" name="name" required><br><br>
+            <div class="modal-content">
+                <span class="close" onclick="closeModal()">&times;</span>
+                <h3>צור קשר</h3>
+                <form action="send_email.php" method="POST">
+                    <label for="name">שם:</label><br>
+                    <input type="text" id="name" name="name" required><br><br>
 
-                <label for="phone">טלפון:</label><br>
-                <input type="text" id="phone" name="phone" required><br><br>
+                    <label for="phone">טלפון:</label><br>
+                    <input type="text" id="phone" name="phone" required><br><br>
 
-                <label for="email">מייל:</label><br>
-                <input type="email" id="email" name="email" required><br><br>
+                    <label for="email">מייל:</label><br>
+                    <input type="email" id="email" name="email" required><br><br>
 
-                <label for="message">הודעה:</label><br>
-                <textarea id="message" name="message" rows="4" cols="40" required></textarea><br><br>
+                    <label for="message">הודעה:</label><br>
+                    <textarea id="message" name="message" rows="4" cols="40" required></textarea><br><br>
 
-                <input type="submit" value="שלח">
-            </form>
+                    <input type="submit" value="שלח">
+                </form>
+            </div>
         </div>
     </div>
 
