--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         canvas {
             display: block;
-            position: fixed;
+            position: absolute;
             top: 0;
             left: 0;
             width: 100%;
@@ -25,7 +25,7 @@
         }
 
         header img {
-            max-width: 300px;
+            max-width: 100%;
             height: auto;
             margin: 20px auto;
             display: block;
@@ -42,9 +42,9 @@
 
         .whatsapp-link, .contact-button {
             display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 18px;
+            margin-top: 100%  /* מתאים לגודל המסך */;
+            padding: 12px 20px;
+            font-size: 16px;
             text-decoration: none;
             border-radius: 5px;
             width: 200px; /* גודל קבוע לשני הלחצנים */
